text spacing fixes

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -56,6 +56,7 @@ h6 {
 	font-family: 'PressFeeling';
 	font-weight: 300;
 	letter-spacing: 0;
+	margin: 0 0 20px;
 }
 
 h1 {
@@ -100,6 +101,7 @@ input[type=submit] {
 	letter-spacing: 0;
 	line-height: 1;
 	padding: 5px 15px;
+	height: auto;
 	&:hover {
 		background: @green;
 		color: #fff;
@@ -690,6 +692,7 @@ input[type=submit] {
 					border: 1px solid #333;
 					.border-radius(5px);
 					width: 100%;
+					margin: 0;
 				}
 				textarea {
 					min-height: 300px;
@@ -702,6 +705,11 @@ input[type=submit] {
 						display: inline;
 					}
 				}
+			}
+			input[type=submit] {
+				display: block;
+				width: 100%;
+				padding: 10px;
 			}
 		}
 		.half-group {
